--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: "3.5"
 
-install: pip install -r require
+install: pip install -r requirements.txt
 
 script: python3 silvr_tests.py
