--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python: "3.5"
 
-install: pip install -r requirements.txt
+install:
+ - cp config.py.example config.py
+ - pip install -r requirements.txt
 
 script: python3 silvr_tests.py
